--- a/style.css
+++ b/style.css
@@ -14,16 +14,22 @@ body {
 }
 
 .wrapper {
+   width: 100%;
     max-width: 1000px;
-    margin: auto;
     padding: 40px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
 }
 
 .container {
     background: var(--card-bg);
     padding: 40px;
     border-radius: 16px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    border: 1px solid rgba(251, 191, 36, 0.1);
 }
 
 h1 {
@@ -39,12 +45,8 @@ h1 {
     align-items: center;
 }
 
-#imageUpload {
-    display: none !important;
-}
-
 button, .custom-file-upload {
-    background: var(--accent-gold) !important;
+    background: var(--accent-gold);
     color: black !important;
     border: none;
     padding: 12px 24px;
@@ -56,7 +58,11 @@ button, .custom-file-upload {
 }
 
 button:hover, .custom-file-upload:hover {
-    background: white !important;
+    background: white ;
+}
+
+input[type="file"] { 
+    display: none; 
 }
 
 .main-content {
